# APP5

./: README.md
AI/TP1/: Classic ML - Supervised Learning - linear regression.ipynb  IRIS - Une correction.ipynb  TP-IRIS.ipynb
Architecture-service/: Cli.js  Config.js  Contact.js  ContactService.js  FileContactService.js  README.md  Router.js  Server.js  contacts.js  contacts.json  helpers.js  index.js  package-lock.json  package.json
Architecture-service/frontend/: index.html
CPP/: CMakeLists.txt
CPP/TP1/: CMakeLists.txt
CPP/TP1/Exercice1/: CMakeLists.txt  README  matvec.cpp  matvec.hpp
CPP/TP3/: CMakeLists.txt  algorithms_templates_sujet.cpp  algorithms_templates_sujet.hpp
CPP/TP_NOTE/: CMakeLists.txt  app5_tp_note_p1.cpp  app5_tp_note_p2.cpp  app5_tp_note_p2_q4.cpp
IP/TP1-TI/: CMakeLists.txt  main.cpp
IP/TP1-TI-PY/: cams.py  main.py  question_1.py  question_2.py
IP/TP1-TI-PY/assets/: solution.txt
IP/TP2/: TP2.py  TP2_lolo.py  functions.py
IP/TP3/: Evaluation.py  Reconstruct.py  TP3.py  functions.py  unique_frag.py
