add_compile_options(
        -Wall
        -Wextra
        -Werror
        -Wnull-dereference
        -Wold-style-cast
        -Wdouble-promotion
        -Wshadow)

add_executable(tp_note_p1 app5_tp_note_p1.cpp)
add_executable(tp_note_p2 app5_tp_note_p2.cpp)
add_executable(tp_note_p2_q4 app5_tp_note_p2_q4.cpp)